[gd_scene load_steps=4 format=2]

[ext_resource path="res://ui/screens/settings/widgetstab.gd" type="Script" id=1]
[ext_resource path="res://ui/screens/settings/widgetbox.gd" type="Script" id=2]
[ext_resource path="res://ui/screens/settings/widgettree.gd" type="Script" id=3]

[node name="Widgets" type="Tabs"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0
script = ExtResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 10.0
margin_top = 10.0
margin_right = 1262.0
margin_bottom = 684.0

[node name="Widgets" type="PanelContainer" parent="MarginContainer/VBoxContainer"]
margin_right = 1252.0
margin_bottom = 167.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="WidgetBox" type="ItemList" parent="MarginContainer/VBoxContainer/Widgets"]
margin_left = 7.0
margin_top = 7.0
margin_right = 1245.0
margin_bottom = 160.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/icon_margin = 15
auto_height = true
max_columns = 8
same_column_width = true
fixed_column_width = 240
icon_mode = 0
fixed_icon_size = Vector2( 50, 50 )
script = ExtResource( 2 )

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 171.0
margin_right = 1252.0
margin_bottom = 674.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 3.0

[node name="WidgetTree" type="Tree" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_right = 404.0
margin_bottom = 503.0
hint_tooltip = "Drop widgets here"
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 3 )

[node name="VSeparator" type="VSeparator" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 408.0
margin_right = 438.0
margin_bottom = 503.0
custom_constants/separation = 30

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 442.0
margin_right = 1252.0
margin_bottom = 503.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 2.0

[node name="SpaceRatioOption" type="HBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
visible = false
margin_right = 810.0
margin_bottom = 16.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/SpaceRatioOption"]
margin_right = 403.0
margin_bottom = 16.0
hint_tooltip = "The space ratio determines how much space this widget may take compared to other widgets in the same parent container"
size_flags_horizontal = 3
size_flags_vertical = 7
text = "Space ratio"

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/SpaceRatioOption"]
margin_left = 407.0
margin_right = 810.0
margin_bottom = 16.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HSlider" type="HSlider" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/SpaceRatioOption/HBoxContainer"]
margin_right = 349.0
margin_bottom = 16.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 7.0
min_value = 1.0
max_value = 10.0
value = 1.0
tick_count = 3
ticks_on_borders = true

[node name="ValueDisplay" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/SpaceRatioOption/HBoxContainer"]
margin_left = 353.0
margin_right = 403.0
margin_bottom = 16.0
size_flags_horizontal = 3
size_flags_vertical = 7
text = "0"
align = 2

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
margin_right = 810.0
margin_bottom = 30.0
custom_constants/separation = 30

[node name="WidgetOptionsArea" type="Container" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
margin_top = 34.0
margin_right = 810.0
margin_bottom = 503.0
size_flags_horizontal = 3
size_flags_vertical = 3

[connection signal="button_pressed" from="MarginContainer/VBoxContainer/HBoxContainer/WidgetTree" to="MarginContainer/VBoxContainer/HBoxContainer/WidgetTree" method="_on_WidgetTree_button_pressed"]
[connection signal="item_selected" from="MarginContainer/VBoxContainer/HBoxContainer/WidgetTree" to="MarginContainer/VBoxContainer/HBoxContainer/WidgetTree" method="_on_WidgetTree_item_selected"]
[connection signal="value_changed" from="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/SpaceRatioOption/HBoxContainer/HSlider" to="." method="_on_SpaceRatioOptionSlider_value_changed"]
